Use block display to prevent FOUT on firefox

--- a/assets/style.css
+++ b/assets/style.css
@@ -105,14 +105,14 @@
   font-family: "Playwrite PT";
   src: url("/assets/fonts/Playwrite_PT/PlaywritePT-VariableFont_wght.ttf")
     format("truetype");
-  font-display: optional;
+  font-display: block;
 }
 
 @font-face {
   font-family: "Inter";
   src: url("/assets/fonts/Inter/Inter-VariableFont_opsz,wght.ttf")
     format("truetype");
-  font-display: optional;
+  font-display: block;
 }
 
 body {
